test/resources/nameAnalyzer/failing/ArgumentNumber1.scala
object Args extends App {
  def foo(i: Int): Int = { foo(1, 2) }
}
